<resources>
    <string name="app_name">Inventory App</string>
    <string name="overview"> Overview</string>
    <string name="hint_price">Enter price</string>
    <string name="hint_item_name">Enter product name</string>
    <string name="hint_quantity">Enter quantity</string>
    <string name="quantity_cannot_be_empty">Quantity cannot be empty.</string>
    <string name="quantity_cannot_be_less_0">Quantity cannot be less than 0.</string>
    <string name="hint_supplier_name">Enter supplier name</string>
    <string name="hint_phone">Enter supplier phone</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_all_entries">Delete All Items</string>
    <string name="insert_item_failed">Insertion of new item was not successful.</string>
    <string name="insert_item_successful">Insertion of new item was successful.</string>
    <string name="update_item_failed">Update was not successful</string>
    <string name="update_item_successful">Update was successful</string>
    <string name="item_info">Item info</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="example_item_name">Rock</string>
    <string name="example_supplier">The Earth</string>
    <string name="example_phone_number">000–555–444</string>

    <string name="msg_rows_deteted">rows deleted from item database</string>
    <string name="new_item">Add new item data</string>
    <string name="fill_blank">Fill the blanks first, please!</string>
    <string name="question_item_name">What is the name of the item?</string>
    <string name="question_item_price">What is the price of the item?</string>
    <string name="question_item_quantity">How many of that item are in stock?</string>
    <string name="question_item_supplier_name">What is the name of item supplier?</string>
    <string name="question_item_supplier_phone">What is suppliers phone number?</string>
    <string name="selling_icon">selling icon</string>
    <string name="category_unknown">Unknown</string>
    <string name="category_unknown1">Name</string>
    <string name="category_unknown2">Price</string>
    <string name="category_unknown3">Stock</string>
    <string name="editor_activity_title_new_item">Add an item</string>
    <string name="price_hint">Price</string>
    <string name="currency_symbol">$</string>
    <string name="in_stock">In stock</string>
    <string name="minus">minus</string>
    <string name="plus">Plus</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_name">Supplier name</string>
    <string name="phone">Phone</string>
    <string name="supplier_phone">Supplier phone number</string>
    <string name="phone_button">Phone button</string>
    <string name="e_mail">E-mail</string>
    <string name="supplier_e_mail">Supplier E-mail Address</string>
    <string name="image">image</string>
    <string name="intro_info">Database of items is empty now. To add new item into database, please click on the add button.</string>
    <string name="item_name">Item name</string>
    <string name="name_of_item">Name of item</string>
    <string name="price">Price</string>
    <string name="item_price">Price of item</string>
    <string name="supplier_info">Supplier info</string>
    <string name="discard">Discard changes</string>
    <string name="keep_edit">Continue with editing</string>
    <string name="unsaved_changes">Discard your changes and quit editing?</string>
    <string name="delete_item_failed">Delete this item?</string>
    <string name="delete_item_success">Delete this item?</string>
    <string name="delete_msg">Delete this item?</string>
    <string name="cancel">Cancel</string>

</resources>
